--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.App {
+  display: block;
+  position: relative;
+  top: 100px;
+  width: 1000px;
+  height: 700px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: antiquewhite;
+  border-radius: 20px;
+}
