--- a/src/components/CurrentWeather/CurrentWeather.css
+++ b/src/components/CurrentWeather/CurrentWeather.css
@@ -31,9 +31,11 @@
 
 .actual-temperature {
     font-size: 50px;
+    margin: 0;
 }
 
 .weather-description {
+    margin: 0;
     font-size: large;
 }
 
